[package]
name = "wakeup"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_regex = "1.1.0"
regex = "1.11.0"
anyhow = "1.0.91"
thiserror = "1.0.65"
humantime = "2.1.0"
humantime-serde = "1.1.1"
reqwest = "0.12.8"
tokio = { version = "1", features = ["full"] }
