[package]
name = "rallyup"
version = "0.1.0"
edition = "2021"
authors = ["Darwin Darakananda <darwin@cu.co.th>"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "tool", "network", "wol", "automation"]
categories = ["command-line-utilities"]
description = """
rallyup is a lightweight Wake-On-LAN (WOL) scheduler and dependency manager that ensures infrastructure services, such as firewalls, storage, and hypervisors, are brought online in the correct sequence and at the right time.
"""

[dependencies]
pnet = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_regex = "1.1.0"
regex = "1.11.0"
anyhow = "1.0.91"
thiserror = "1.0.65"
humantime = "2.1.0"
humantime-serde = "1.1.1"
reqwest = "0.12.8"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28.1"
colored = "2.1.0"

[dev-dependencies]
mockito = "1.5.0"
